# ff-profiles

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs
.claude/: settings.local.json
.github/workflows/: release.yml
data/: de.seblebs.ff-profiles.desktop
extension/: extension.js  metadata.json
src/: config_paths.rs  digging.rs  main.rs  runner.rs  ui.rs
