[package]
name = "ff-profiles"
version = "0.1.0"
edition = "2021"
description = "Launch Firefox and other Gecko-based browsers with a specific profile from the command line"
license = "AGPL-3.0-only"
repository = "https://github.com/baxyz/firefox-profiles"

[[bin]]
name = "ff-profiles"
path = "src/main.rs"

[dependencies]
anyhow = "1"
dirs = "6"
dialoguer = "0.12"

[dev-dependencies]
tempfile = "3"
